Make extraction more robust to changes

--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# 0. Notes\n",
     "\n",
-    "Run this once a day to extract live data from https://ihmecovid19storage.blob.core.windows.net/latest/ihme-covid19.zip\n",
-    "\n",
-    "Be careful of file name changes"
+    "Run this once a day to extract live data from https://ihmecovid19storage.blob.core.windows.net/latest/ihme-covid19.zip"
    ]
   },
   {
@@ -20,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -51,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,21 +80,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DATE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c0a2e4ac857e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0mdeaths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRAW_DIREC\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlatest_direc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'/'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mcsvs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m \u001b[0mLATEST_DATE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_date\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeepcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeaths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdeaths\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-c0a2e4ac857e>\u001b[0m in \u001b[0;36mfind_date\u001b[0;34m(frame)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfind_date\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# Find latest date for historical data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mdates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mDATE\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mstates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mLOCATION\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mdate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DATE' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def find_csvs( path_to_dir, suffix=\".csv\" ):\n",
     "    filenames = listdir(path_to_dir)\n",
     "    return [ filename for filename in filenames if filename.endswith(suffix)]\n",
     "\n",
+    "def find_date(frame):\n",
+    "    # Find latest date for historical data\n",
+    "    dates = np.unique(frame[DATE])\n",
+    "    states = np.unique(frame[LOCATION])\n",
+    "    for date in dates[::-1]:\n",
+    "        delta = datetime.strptime(latest_date, '%Y-%m-%d') - datetime.strptime(date, '%Y-%m-%d')\n",
+    "        if abs(delta.days) <= 7:\n",
+    "            sub = frame.loc[frame[DATE] == date]\n",
+    "            current_date = True\n",
+    "            for i in range(sub.shape[0]):\n",
+    "                \n",
+    "                if sub['deaths_mean'].iloc[i] != sub['deaths_upper'].iloc[i]:\n",
+    "                    current_date = False\n",
+    "            \n",
+    "            if current_date:\n",
+    "                return date\n",
+    "\n",
     "# Get all downloaded directory names\n",
     "directories = next(os.walk(RAW_DIREC))[1]\n",
-    "directories.remove('.ipynb_checkpoints')\n",
-    "\n",
-    "# Columns for compiled data\n",
-    "columns = [LOCATION, 'date', 'totdea_mean', 'totdea_lower', 'totdea_upper', 'deaths_mean', 'deaths_lower', 'deaths_upper']\n",
-    "\n",
+    "if '.ipynb_checkpoints' in directories:\n",
+    "    directories.remove('.ipynb_checkpoints')\n",
+    "    \n",
     "# Find latest date\n",
     "for i, directory in enumerate(directories):\n",
     "    date = directory[:10].replace(\"_\", '-')\n",
@@ -112,6 +139,17 @@
     "csvs = find_csvs(RAW_DIREC + latest_direc + '/')\n",
     "deaths = pd.read_csv(RAW_DIREC + latest_direc + '/' + csvs[0])\n",
     "\n",
+    "for col in list(deaths.columns):\n",
+    "    if 'location' in col:\n",
+    "        LOCATION = col\n",
+    "    elif 'date' in col:\n",
+    "        DATE = col\n",
+    "        \n",
+    "LATEST_DATE = find_date(copy.deepcopy(deaths))\n",
+    "\n",
+    "# Columns for compiled data\n",
+    "columns = [LOCATION, DATE, 'totdea_mean', 'totdea_lower', 'totdea_upper', 'deaths_mean', 'deaths_lower', 'deaths_upper']\n",
+    "        \n",
     "# Get unique locations\n",
     "locations = np.unique(deaths[LOCATION])\n",
     "\n",
@@ -119,11 +157,10 @@
     "\n",
     "    # Subset on lcoation\n",
     "    sub_deaths = deaths.loc[deaths[LOCATION] == location]\n",
-    "    sub_deaths = sub_deaths.loc[sub_deaths['date'] >= latest_date]\n",
+    "    sub_deaths = sub_deaths.loc[sub_deaths[DATE] >= LATEST_DATE]\n",
     "\n",
     "    sub_deaths = sub_deaths[columns].copy().reset_index()\n",
-    "    sub_deaths = sub_deaths.sort_values(by='date')\n",
-    "\n",
+    "    sub_deaths = sub_deaths.sort_values(by=DATE)\n",
     "\n",
     "    # Calculate projections\n",
     "    projections = pd.DataFrame([sub_deaths.iloc[0].values], columns=sub_deaths.columns)\n",
@@ -162,12 +199,8 @@
     "# Change type to int\n",
     "compiled_projections = compiled_projections.astype({'deaths': 'int32', 'cumul_deaths': 'int32'})\n",
     "\n",
-    "# Check if file for day behind exists\n",
-    "yesterday_date = datetime.strptime(latest_date, '%Y-%m-%d') - timedelta(days=1)\n",
-    "yesterday_date = yesterday_date.strftime('%Y-%m-%d')\n",
-    "\n",
     "# Save to file\n",
-    "compiled_projections.to_csv(PROCESSED_DIREC + latest_date + \".csv\", index = None)"
+    "compiled_projections.to_csv(PROCESSED_DIREC + LATEST_DATE + \".csv\", index = None)"
    ]
   }
  ],
