predictions put into gdoc

--- a/predictions/convert_to_state_level.ipynb
+++ b/predictions/convert_to_state_level.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# 0. Notes\n",
     "\n",
-    "Converts county level predictions to state and country level"
+    "Converts county level predictions to state and country level\n",
+    "\n",
+    "Note: the county-level predictions can be downloaded from [this gsheet](https://docs.google.com/spreadsheets/d/1ZSG7o4cV-G0Zg3wlgJpB2Zvg-vEN1i_76n2I-djL0Dk/edit#gid=1510898570)"
    ]
   },
   {
