updating italys eda

--- a/modeling/IHME/01_eda_italy.ipynb
+++ b/modeling/IHME/01_eda_italy.ipynb
@@ -2331,7 +2331,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\t\u001b[31mmodified:   01_eda_italy.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   ../basic_model_framework.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "! git status\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved working directory and index state WIP on master: 4fc5978 daily update\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git stash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "remote: Enumerating objects: 23, done.\u001b[K\n",
+      "remote: Counting objects: 100% (23/23), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
+      "remote: Total 23 (delta 8), reused 11 (delta 4), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (23/23), done.\n",
+      "From https://github.com/Yu-Group/covid-19-ventilator-demand-prediction\n",
+      " * branch            master     -> FETCH_HEAD\n",
+      "   4fc5978..aac7083  master     -> origin/master\n",
+      "Updating 4fc5978..aac7083\n",
+      "Fast-forward\n",
+      " county_quickstart.ipynb          |  47 \u001b[32m++++++++++\u001b[m\u001b[31m-\u001b[m\n",
+      " data/02_county_FIPS.csv          |   6 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " data/nytimes/confirmed_cases.csv | 161 \u001b[32m++++++++++++++++++\u001b[m\u001b[31m------------------\u001b[m\n",
+      " data/nytimes/deaths.csv          | 162 \u001b[32m++++++++++++++++++\u001b[m\u001b[31m------------------\u001b[m\n",
+      " functions/emerging_index.py      |  35 \u001b[32m++++\u001b[m\u001b[31m----\u001b[m\n",
+      " results/emerging_hotspots.html   |  31 \u001b[32m+++++++\u001b[m\n",
+      " viz/viz_interactive.py           | 173 \u001b[32m+++++++++++++++++++++++++++\u001b[m\u001b[31m------------\u001b[m\n",
+      " 7 files changed, 374 insertions(+), 241 deletions(-)\n",
+      " create mode 100644 results/emerging_hotspots.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
