Update ihme projections and edit script

--- a/predictions/other_modeling/extract_live_ihme_projections.ipynb
+++ b/predictions/other_modeling/extract_live_ihme_projections.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,11 @@
     "def find_date(frame):\n",
     "    # Find latest date for historical data\n",
     "    dates = np.unique(frame[DATE])\n",
-    "    states = np.unique(frame[LOCATION])\n",
     "    for date in dates[::-1]:\n",
     "        delta = datetime.strptime(latest_date, '%Y-%m-%d') - datetime.strptime(date, '%Y-%m-%d')\n",
     "        if abs(delta.days) <= 7:\n",
     "            sub = frame.loc[frame[DATE] == date]\n",
+    "            sub = sub.loc[sub[LOCATION] == 'United States of America'].reset_index()\n",
     "            current_date = True\n",
     "            for i in range(sub.shape[0]):\n",
     "                \n",
