add icu beds plot

--- a/hospital_quickstart.ipynb
+++ b/hospital_quickstart.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +10,10 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "predicting...\n"
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> b5002b1139e783bf53ccdb633d9f34b08b09fb89
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -56,21 +49,37 @@
    ]
   },
   {
-   "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 2,
-=======
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['Latitude'].isna().sum()"
+    "# look at icu beds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
->>>>>>> b5002b1139e783bf53ccdb633d9f34b08b09fb89
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df[df['Hospital Name'].str.contains('Petal')]['ICU Beds'])\n",
+    "plt.figure(dpi=500, facecolor='white')\n",
+    "plt.yscale('log')\n",
+    "plt.hist(df['ICU Beds'], bins=50)\n",
+    "plt.ylabel('Num hospitals (log-scale)')\n",
+    "plt.xlabel('Num ICU Beds')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# severity index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,13 +403,6 @@
     "counties_json = json.load(open(\"data/geojson-counties-fips.json\", \"r\"))\n",
     "viz_interactive.plot_hospital_severity_slider(df, df_county=df_county, counties_json=counties_json, dark=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -419,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
