split viz_interactive + viz_map

--- a/county_quickstart.ipynb
+++ b/county_quickstart.ipynb
@@ -16,7 +16,7 @@
     "import seaborn as sns\n",
     "import sys\n",
     "sys.path.append('modeling')\n",
-    "from viz import viz_interactive, viz\n",
+    "from viz import viz_interactive, viz, viz_map\n",
     "from modeling import exponential_modeling\n",
     "from bokeh.plotting import figure, show, output_notebook, output_file, save\n",
     "from functions import merge_data\n",
@@ -210,7 +210,7 @@
     "for state in ['NY', 'WA', 'CA']:\n",
     "    d = df[df[\"StateNameAbbreviation\"] == state]\n",
     "\n",
-    "    p = viz_interactive.plot_counties(d, \n",
+    "    p = viz_map.plot_counties(d, \n",
     "                          variable_to_distribute='tot_cases',\n",
     "                          variables_to_display=ks,\n",
     "                          state=state,\n",
@@ -898,7 +898,7 @@
     "# ...or plot choropleth too. Much slower and the map is less responsive\n",
     "# read in county geojson\n",
     "counties_json = json.load(open(\"data/geojson-counties-fips.json\", \"r\"))\n",
-    "viz_interactive.plot_counties_slider(df, n_past_days=1, filename=\"results/deaths_choropleth.html\", \n",
+    "viz_map.plot_counties_slider(df, n_past_days=1, filename=\"results/deaths_choropleth.html\", \n",
     "                                     plot_choropleth=True, counties_json=counties_json)"
    ]
   },
@@ -919,7 +919,7 @@
     "for state in ['NY', 'WA', 'CA']:\n",
     "    d = df[df[\"StateNameAbbreviation\"] == state]\n",
     "\n",
-    "    p = viz_interactive.plot_counties(d, \n",
+    "    p = viz_map.plot_counties(d, \n",
     "                          variable_to_distribute='dem_to_rep_ratio',\n",
     "                          variables_to_display=ks,\n",
     "                          state=state,\n",
@@ -1277,7 +1277,7 @@
    },
    "outputs": [],
    "source": [
-    "viz_interactive.plot_emerging_hotspots_grid(df, target_days=target_days, n_days_past=n_days_past)"
+    "viz_map.plot_emerging_hotspots_grid(df, target_days=target_days, n_days_past=n_days_past)"
    ]
   },
   {
@@ -1883,13 +1883,6 @@
     "                                                   'Predicted Deaths 3-day', 'Predicted Deaths 4-day',\n",
     "                                                   'Predicted Deaths 5-day']].head(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1908,7 +1901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
