--- a/modeling/hospital_quickstart.ipynb
+++ b/modeling/hospital_quickstart.ipynb
@@ -17,8 +17,7 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "predicting...\n"
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -42,18 +41,27 @@
     "import plotly.graph_objects as go\n",
     "import sys\n",
     "import json\n",
+    "import os\n",
+    "import inspect\n",
+    "\n",
+    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
+    "parentdir = os.path.dirname(currentdir)\n",
+    "sys.path.append(parentdir)\n",
+    "sys.path.append(parentdir + '/modeling')\n",
+    "\n",
     "import load_data\n",
-    "sys.path.append('modeling')\n",
     "from viz import viz, viz_interactive\n",
     "from modeling.fit_and_predict import add_preds\n",
     "from functions import merge_data\n",
     "from functions import update_severity_index as severity_index\n",
     "\n",
     "NUM_DAYS_LIST = [1, 2, 3, 4, 5, 6, 7]\n",
-    "df_hospital = load_data.load_hospital_level(merged_hospital_level_info='processed/10_hospital_level_info_merged_with_callnotes.csv')\n",
-    "df_county = load_data.load_county_level()\n",
-    "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST, cached_dir='data') # adds keys like \"Predicted Deaths 1-day\"\n",
-    "df = merge_data.merge_county_and_hosp(df_county, df_hospital)\n"
+    "df_hospital = load_data.load_hospital_level(data_dir=oj(parentdir, 'data_hospital_level'),\n",
+    "                                            merged_hospital_level_info=oj('processed',\n",
+    "                                                                          '10_hospital_level_info_merged_with_callnotes.csv'))\n",
+    "df_county = load_data.load_county_level(data_dir=oj(parentdir, 'data'))\n",
+    "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST, cached_dir=oj(parentdir, 'data')) # adds keys like \"Predicted Deaths 1-day\"\n",
+    "df = merge_data.merge_county_and_hosp(df_county, df_hospital)"
    ]
   },
   {
