add surge index plot

--- a/functions/viz_fastgrants.ipynb
+++ b/functions/viz_fastgrants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,9 +36,10 @@
     "from functions import merge_data\n",
     "from viz import  viz_interactive\n",
     "import matplotlib.pyplot as plt\n",
-    "import update_modeling_results\n",
     "import plotly.express as px\n",
     "import plotly\n",
+    "from matplotlib.patches import Patch\n",
+    "from matplotlib.lines import Line2D\n",
     "from functions import merge_data\n",
     "from fit_and_predict import add_preds\n",
     "from update_severity_index import df_to_plot, add_severity_index"
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,17 +434,93 @@
    "outputs": [],
    "source": [
     "today = datetime.today().strftime(\"%B %d\")\n",
-    "plt.figure(dpi=500)\n",
+    "plt.figure(dpi=500, figsize=(7, 3))\n",
     "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
-    "for i in [1, 2, 3]:\n",
+    "cs = ['b','#dec34b','r']\n",
+    "# cs = ['#91bfdb','#dec34b','#fc8d59']\n",
+    "for i in [3, 2, 1]:\n",
     "    dr = d[d['Severity 3-day']==i]\n",
     "    plt.plot(dr['Total Deaths Hospital'], \n",
     "             dr['Predicted New Deaths Hospital 3-day'], '.',\n",
-    "             label=f'{remap[i]}', alpha=0.3)\n",
+    "             label=f'{remap[i]}', alpha=0.3, color=cs[i -1])\n",
     "plt.xlabel(f'Total deaths at hospital by {today}')\n",
     "plt.ylabel('Predicted new deaths at hospital in\\nnext 3 days')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
+    "plt.legend(title='Severity Index')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.today().strftime(\"%B %d\")\n",
+    "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
+    "cs_d = {1: 'b', 2: '#dec34b', 3: 'r'}\n",
+    "cs = ['b','#dec34b','r']\n",
+    "# cs = ['#91bfdb','#dec34b','#fc8d59']\n",
+    "x = d['Total Deaths Hospital']\n",
+    "y = d['Surge 3-day']\n",
+    "c = [cs_d[x] for x in d['Severity 3-day']] # d['Severity 3-day'] #\n",
+    "s = d['ICU Beds'] / 10\n",
+    "fig, ax = plt.subplots(dpi=500, figsize=(7, 3))\n",
+    "ax.set_prop_cycle(custom_cycler)\n",
+    "scatter = ax.scatter(x, y, c=c, s=s, alpha=0.5)\n",
+    "plt.yscale('symlog')\n",
+    "plt.xscale('symlog')\n",
+    "\n",
+    "# produce a legend with the unique colors from the scatter\n",
+    "leg_els = [Line2D([0], [0], marker='o', color='w', label='High', markerfacecolor=cs[0], markersize=6),\n",
+    "           Line2D([0], [0], marker='o', color='w', label='Medium', markerfacecolor=cs[1], markersize=6),\n",
+    "           Line2D([0], [0], marker='o', color='w', label='Low', markerfacecolor=cs[2], markersize=6)]\n",
+    "\n",
+    "# leg_els = scatter.legend_elements()\n",
+    "# legend1 = ax.legend(*leg_els, loc=\"upper left\", title=\"Severity Index\")\n",
+    "legend1 = ax.legend(handles=leg_els, loc=\"upper left\", title=\"Severity Index\", fontsize=9)\n",
+    "ax.add_artist(legend1)\n",
+    "\n",
+    "# produce a legend with a cross section of sizes from the scatter\n",
+    "handles, labels = scatter.legend_elements(prop=\"sizes\", alpha=0.6)\n",
+    "l2 = []\n",
+    "for i in range(len(labels)):\n",
+    "    s = labels[i]\n",
+    "    num = 10 * int(s[s.index('{') + 1: s.index('}')])\n",
+    "    l2.append('$\\\\mathdefault{' + str(num) + '}$')\n",
+    "legend2 = ax.legend(handles, l2, loc=\"lower right\", title=\"#ICU beds\")\n",
+    "plt.xlabel(f'Total deaths at hospital by {today}')\n",
+    "plt.ylabel('Surge Index 3-day')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.today().strftime(\"%B %d\")\n",
+    "plt.figure(dpi=500, figsize=(7, 3))\n",
+    "remap = {1: 'Low', 2: 'Medium', 3: 'High'}\n",
+    "cs = ['b','#dec34b','r']\n",
+    "# cs = ['#91bfdb','#dec34b','#fc8d59']\n",
+    "x = 'Total Deaths Hospital'\n",
+    "y = 'Surge 3-day'\n",
+    "\n",
+    "for i in [3, 2, 1]:\n",
+    "    dr = d[d['Severity 3-day']==i]\n",
+    "    plt.plot(dr[x], dr[y], '.',\n",
+    "             label=f'{remap[i]}', alpha=0.3, color=cs[i -1])\n",
+    "\n",
+    "# plt.scatter(d[x], d[y], c=d['Severity 3-day'])\n",
+    "plt.xlabel(f'Total deaths at hospital by {today}')\n",
+    "plt.ylabel('Surge Index 3-day')\n",
+    "# plt.xscale('log')\n",
+    "# plt.yscale('log')\n",
+    "plt.yscale('symlog')\n",
+    "plt.xscale('symlog')\n",
     "plt.legend(title='Severity Index')\n",
     "plt.show()"
    ]
