Add surge index to severity index map

--- a/modeling/hospital_quickstart.ipynb
+++ b/modeling/hospital_quickstart.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -17,8 +17,7 @@
      "output_type": "stream",
      "text": [
       "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "predicting...\n"
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -51,7 +50,7 @@
     "sys.path.append(parentdir + '/modeling')\n",
     "\n",
     "import load_data\n",
-    "from viz import viz, viz_interactive\n",
+    "from viz import viz, viz_interactive, viz_map\n",
     "from modeling.fit_and_predict import add_preds\n",
     "from functions import merge_data\n",
     "from functions import update_severity_index as severity_index\n",
@@ -74,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total hospitals 5943 Counter({1: 3732, 2: 1106, 3: 1105})\n"
+      "total hospitals 5943 Counter({1: 3834, 2: 1055, 3: 1054})\n"
      ]
     }
    ],
@@ -543,8 +542,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "counties_json = json.load(open(\"data/geojson-counties-fips.json\", \"r\"))\n",
-    "viz_interactive.plot_hospital_severity_slider(df, df_county=df_county, counties_json=counties_json, dark=False)"
+    "counties_json = json.load(open(oj(parentdir, \"data\", \"geojson-counties-fips.json\"), \"r\"))\n",
+    "viz_map.plot_hospital_severity_slider(\n",
+    "    df, df_county=df_county, \n",
+    "    counties_json=counties_json, dark=False,\n",
+    "    filename = oj(parentdir, \"results\", \"severity_map.html\")\n",
+    ")"
    ]
   },
   {
@@ -594,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
