--- a/county_quickstart.ipynb
+++ b/county_quickstart.ipynb
@@ -2,9 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/7 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicting...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [05:20<00:00, 45.61s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'Header-FIPSStandCtyCode', 'EntityofFile',\n",
+      "       'SecondaryEntityOfFile', 'DateofFile', 'DateofCreation', 'FileLength',\n",
+      "       'StateName', 'StateNameAbbreviation', 'CountyName',\n",
+      "       ...\n",
+      "       'neighbor_cases', 'y_preds_0', 'y_preds_1', 'Predicted Deaths 1-day',\n",
+      "       'Predicted Deaths 2-day', 'Predicted Deaths 3-day',\n",
+      "       'Predicted Deaths 4-day', 'Predicted Deaths 5-day',\n",
+      "       'Predicted Deaths 6-day', 'Predicted Deaths 7-day'],\n",
+      "      dtype='object', length=7372)\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
