change data_new/ to data/ in eda notebooks

--- a/eda/ahrf_health/01_EDA_ahrf_health.ipynb
+++ b/eda/ahrf_health/01_EDA_ahrf_health.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir_raw = \"../../data_new/county_level/raw/ahrf_health\"\n",
+    "data_dir_raw = \"../../data/county_level/raw/ahrf_health\"\n",
     "sys.path.append(data_dir_raw)\n",
     "import load"
    ]
@@ -1409,7 +1409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../../data_new/\")\n",
+    "os.chdir(\"../../data/\")\n",
     "from county_level.processed.ahrf_health import clean\n",
     "data_dir_raw = './county_level/raw/ahrf_health'\n",
     "data_dir_clean = './county_level/processed/ahrf_health'"
