use private repo path

--- a/modeling/hospital_quickstart.ipynb
+++ b/modeling/hospital_quickstart.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Note that this notebook uses some private hospita-level data, so can't be run publicly**"
+    "**Note that this notebook uses private hospita-level data, so can't be run publicly**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
     "from functions import update_severity_index as severity_index\n",
     "\n",
     "NUM_DAYS_LIST = [1, 2, 3, 4, 5, 6, 7]\n",
-    "df_hospital = load_data.load_hospital_level(data_dir=oj(parentdir, 'data', 'hospital_level'))\n",
+    "df_hospital = load_data.load_hospital_level(data_dir=oj(os.path.dirname(parentdir), 'covid-19-private-data'))\n",
     "df_county = load_data.load_county_level(data_dir=oj(parentdir, 'data'))\n",
     "df_county = add_preds(df_county, NUM_DAYS_LIST=NUM_DAYS_LIST, cached_dir=oj(parentdir, 'data')) # adds keys like \"Predicted Deaths 1-day\"\n",
     "df = merge_data.merge_county_and_hosp(df_county, df_hospital)"
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total hospitals 5943 Counter({1: 3834, 2: 1055, 3: 1054})\n"
+      "total hospitals 5943 Counter({1: 3634, 2: 1155, 3: 1154})\n"
      ]
     }
    ],
@@ -94,14 +94,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Total Deaths Hospital', 'Hospital Employees', 'Hospital Name',\n",
-       "       'CountyName', 'StateName', 'ICU Beds', 'Severity 1-day', 'Surge 1-day',\n",
+       "       'CountyName', 'StateName', 'ICU Beds', 'CMS Certification Number',\n",
+       "       'countyFIPS', 'Severity 1-day', 'Surge 1-day',\n",
        "       'Predicted New Deaths Hospital 1-day',\n",
        "       'Predicted Deaths Hospital 1-day', 'Severity Index 1-day',\n",
        "       'Severity 2-day', 'Surge 2-day', 'Predicted New Deaths Hospital 2-day',\n",
@@ -115,11 +116,12 @@
        "       'Severity 6-day', 'Surge 6-day', 'Predicted New Deaths Hospital 6-day',\n",
        "       'Predicted Deaths Hospital 6-day', 'Severity Index 6-day',\n",
        "       'Severity 7-day', 'Surge 7-day', 'Predicted New Deaths Hospital 7-day',\n",
-       "       'Predicted Deaths Hospital 7-day', 'Severity Index 7-day'],\n",
+       "       'Predicted Deaths Hospital 7-day', 'Severity Index 7-day',\n",
+       "       'Surge County 3-day', 'tot_deaths'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
